--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: pallab
-description: Building customized software for small and medium sized companies.
+description: A network of friends striving for mutual improvement. Sometimes we built stuff, too. 
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-cayman
