--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: pallab
-description: A network of friends striving for mutual improvement. Sometimes we built stuff, too. 
+description: A network of pals striving for mutual improvement. Sometimes we built stuff, too. 
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-cayman
