--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: pallab
+title: pal.lab
 description: A network of pals striving for mutual improvement. Sometimes we built stuff, too. 
 show_downloads: false
 google_analytics:
