--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: pal.lab
-description: A network of pals striving for mutual improvement. Sometimes we built stuff, too. 
+description: A handful pals striving for mutual improvement. Sometimes we built stuff, too. 
 show_downloads: false
 google_analytics: UA-113864782-1
 theme: jekyll-theme-cayman
