--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: pal.lab
-description: A handful pals striving for mutual improvement. Sometimes we build stuff, too. 
+description: We're a small web agency and love crafting great software for our customers.
 show_downloads: false
 google_analytics: UA-113864782-1
 theme: jekyll-theme-cayman
